# EveryElection

./: .coveragerc  .env.example  .gitignore  .pyup.yml  .safety-policy.yml  .travis.yml  INSTALL.md  LICENSE  LICENSE.rst  README.md  appspec.yml  cdk.context.json  cdk.json  cdk_app.py  cdk_settings.json  gss-codes.json  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  renovate.json5  tox.ini  unit-codes.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check-for-bank-holiday-updates.yml  python-publish.yml  uv-lock.yml
ad_hoc_boundaries/: GB.geojson  Scotland.geojson
ad_hoc_boundaries/2017/: LGBCE-Birmingham_final_proposals.geojson  LGBCE-Cambridgeshire_final_divisions.geojson  LGBCE-East_Cambridgeshire_final_proposals.geojson  LGBCE-Eastbourne_final_proposals.geojson  LGBCE-Eastleigh_final_proposals.geojson  LGBCE-Hampshire_final_divisions.geojson  LGBCE-Hastings_final_proposals.geojson  LGBCE-Hertfordshire_final_divisions.geojson  LGBCE-Kent_final_divisions.geojson  LGBCE-Lancashire_final_divisions.geojson  LGBCE-Leicestershire_final_divisions.geojson  LGBCE-Lewes_final_proposals.geojson  LGBCE-Lincolnshire_final_divisions.geojson  LGBCE-Nottinghamshire_final_divisions.geojson  LGBCE-Rother_final_proposals.geojson  LGBCE-Southwark_final_proposals.geojson  LGBCE-West_Sussex_final_divisions.geojson
ad_hoc_boundaries/2017/Aberdeen_City_Council_Area_Final_Recommendations/: Aberdeen_City_Council_Area_Final_Recommendations.dbf  Aberdeen_City_Council_Area_Final_Recommendations.sbn  Aberdeen_City_Council_Area_Final_Recommendations.sbx  Aberdeen_City_Council_Area_Final_Recommendations.shp  Aberdeen_City_Council_Area_Final_Recommendations.shp.xml  Aberdeen_City_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/Aberdeenshire_Council_Area_Final_Recommendations/: Aberdeenshire_Council_Area_Final_Recommendations.dbf  Aberdeenshire_Council_Area_Final_Recommendations.sbn  Aberdeenshire_Council_Area_Final_Recommendations.sbx  Aberdeenshire_Council_Area_Final_Recommendations.shp  Aberdeenshire_Council_Area_Final_Recommendations.shp.xml  Aberdeenshire_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/Angus_Council_Area_Final_Recommendations/: Angus_Council_Area_Final_Recommendations.dbf  Angus_Council_Area_Final_Recommendations.sbn  Angus_Council_Area_Final_Recommendations.sbx  Angus_Council_Area_Final_Recommendations.shp  Angus_Council_Area_Final_Recommendations.shp.xml  Angus_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/Cardiff/: Cardiff_ElectoralWards_Final Proposals_polygon.dbf  Cardiff_ElectoralWards_Final Proposals_polygon.shp  Cardiff_ElectoralWards_Final Proposals_polygon.shx
ad_hoc_boundaries/2017/City_of_Edinburgh_Council_Area_Final_Recommendations/: City_of_Edinburgh_Council_Area_Final_Recommendations.dbf  City_of_Edinburgh_Council_Area_Final_Recommendations.shp  City_of_Edinburgh_Council_Area_Final_Recommendations.shp.xml  City_of_Edinburgh_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/Clackmannanshire_Council_Area_Final_Recommendations/: Clackmannanshire_Council_Area_Final_Recommendations.dbf  Clackmannanshire_Council_Area_Final_Recommendations.sbn  Clackmannanshire_Council_Area_Final_Recommendations.sbx  Clackmannanshire_Council_Area_Final_Recommendations.shp  Clackmannanshire_Council_Area_Final_Recommendations.shp.xml  Clackmannanshire_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/Dumfries_and_Galloway_Council_Area_Final_Recommendations/: Dumfries_and_Galloway_Council_Area_Final_Recommendations.dbf  Dumfries_and_Galloway_Council_Area_Final_Recommendations.sbn  Dumfries_and_Galloway_Council_Area_Final_Recommendations.sbx  Dumfries_and_Galloway_Council_Area_Final_Recommendations.shp  Dumfries_and_Galloway_Council_Area_Final_Recommendations.shp.xml  Dumfries_and_Galloway_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/East_Ayrshire_Council_Area_Final_Recommendations/: East_Ayrshire_Council_Area_Final_Recommendations.dbf  East_Ayrshire_Council_Area_Final_Recommendations.sbn  East_Ayrshire_Council_Area_Final_Recommendations.sbx  East_Ayrshire_Council_Area_Final_Recommendations.shp  East_Ayrshire_Council_Area_Final_Recommendations.shp.xml  East_Ayrshire_Council_Area_Final_Recommendations.shx
ad_hoc_boundaries/2017/East_Dunbartonshire_Council_Area_Final_Recommendations/: East_Dunbartonshire_Council_Area_Final_Recommendations.dbf  East_Dunbartonshire_Council_Area_Final_Recommendations.sbn  (+4 more)
cdk_imagebuilder/components/: add_user.yml  install_app.yml  instance_connect.yml
cdk_imagebuilder/stacks/: code_deploy.py  command_runner.py  image_builder.py
cdk_stacks/components/: add_user.yml  install_app.yml  instance_connect.yml  manage_py_command.yml
cdk_stacks/stacks/: code_deploy.py  code_deploy_policies.py  command_runner.py  image_builder.py  power_off_at_end_of_day.py
deploy/: Makefile  create_deployment.py  create_deployment_group.py  deploy-env-vars.json
deploy/hooks/: start_application.sh  validate_application.sh
deployscripts/: before_install.sh  collectstatic.sh  create_deployment.py  create_deployment_group.py  crontab  deploy-env-vars.json  install_crontab.sh  install_frontend_deps.sh  install_python_deps.sh  install_uv.sh  start_application.sh  validate_application.sh
deployscripts/hooks/: stop_application.sh
docs/: aws-resource-diagram.py  deployment.md
every_election/: db_routers.py  urls.py  wsgi.py
every_election/data/: cancellation_reasons.csv
every_election/data_cache/: local-authorities-eng.tsv
every_election/settings/: base.py  deploy.py  dev.py  local.example.py  testing.py
every_election/templates/: 404.html  500.html  base.html  home.html  robots.txt
fixtures/vcr_cassettes/: test_election_for_bad_postcode.yaml  test_election_for_postcode.yaml
requirements/: base.txt  cdk.txt  local.txt  production.txt  testing.txt
scripts/: test.sh
serverscripts/: add_nuts1.sh  backup_db_to_s3.sh  migrate.sh  rebuild_local_db.sh  setenv.sh  sync_map_layers_to_s3.sh
(+623 files in other folders)
