[project]
name = "EveryElection"
version = "0.0.0"
description = "For recording every election in the UK"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "beautifulsoup4==4.12.3",
    "boto3==1.35.98",
    "botocore==1.35.98",
    "commitment==4.0.0",
    "Django==5.2.7",
    "django-cors-headers==4.9.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "django-formtools==2.5.1",
    "django-localflavor==5.0",
    "django-middleware-global-request==0.3.5",
    "django-model-utils==5.0.0",
    "django-storages==1.14.6",
    "djangorestframework==3.16.1",
    "djangorestframework-gis==1.2.0",
    "djangorestframework-jsonp==1.0.2",
    "eco-parser==0.3.0",
    "geojson==3.2.0",
    "psycopg-binary==3.2.12",
    "rapidfuzz==3.12.1",
    "requests==2.32.4",
    "retry2==0.9.5",
    "scrapy==2.12.0",
    "uk-election-ids==0.10.0",
    "uk-election-timetables==4.2.3",
    "uk-geo-utils==0.18.0",
    "dc-django-utils",
    "dc-design-system",
    "python-dotenv==1.0.1",
    "djangorangemiddleware==1.0.1",
    "tippecanoe==2.72.0",
]

[dependency-groups]
cdk = [
    "aws-cdk-lib==2.175.1",
    "aws-cdk.aws-lambda-python-alpha==2.160.0a0",
    "constructs==10.4.2",
    "diagrams==0.24.1",
    "pyyaml==6.0.2",
]
production = [
    "gunicorn==23.0.0",
    "sentry-sdk==2.20.0",
    "gevent==24.11.1",
]
dev = [
    "django-debug-toolbar==6.0.0",
    "pytest==8.3.4",
    "pytest-django==4.11.1",
    "pytest-cov==6.0.0",
    "pytest-freezegun==0.4.2",
    "factory-boy==3.3.1",
    "vcrpy==7.0.0",
    "pytest-xdist==3.6.1",
    "ruff==0.9.4",
    "djhtml==3.0.7",
    "pytest-ruff==0.4.1",
    "playwright==1.49.1",
    "pytest-playwright==0.6.2",
    "moto[events,sqs]==5.0.26",
    "pytest-dotenv==0.5.2",
]


[tool.uv]
package = false
required-version = "==0.8.*"
environments = [
    "platform_python_implementation == 'CPython'"
]

[tool.uv.sources]
dc-django-utils = { git = "https://github.com/DemocracyClub/dc_django_utils.git", tag = "8.0.5" }
dc-design-system = { git = "https://github.com/DemocracyClub/design-system.git", tag = "0.9.0" }

[tool.ruff]
line-length = 80
extend-exclude = ["every_election/settings/local.py"]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = [
    "I",
    "C4",
    "SIM",
    "Q003",
    "RET",
]

[tool.pytest.ini_options]
norecursedirs = [
    "node_modules",
    "src",
    "every_election/static_root",
    "every_election/static",
    ".aws-sam",
    ".ruff-cache",
    ".circleci",
]
addopts = [
    "--ignore=*/__pycache__",
    "--ignore=.*",
    "--ignore=.download-cache",
    "--ignore=every_election/settings/local.py",
    "--ignore=lib",
    "--ignore=cdk.out",
    "--ruff",
    "--ruff-format",
    "--ds=every_election.settings.testing",
]
env_files = [".env"]
